--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                             <h3 class="panel-title text-center">Busca tu oferta mas cercana</h3>
                         </div>
                         <div class="panel-body">
+                          <!-- Fila de busqueda siempre visible -->
                             <div class="row">
                                 <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-
                                     <div class="input-group">
 
                                         <div class="input-group-btn">
@@ -83,8 +83,25 @@
                                               <span class="glyphicon glyphicon-search"></span>
                                             </button>-->
                                         </span>
+                                        <span class="input-group-btn">
+                                            <a  class="btn btn-primary" href="#" role="button">
+                                                Busqueda azanzada<span id="btnBusquedaAvanzada" class="glyphicon glyphicon-chevron-down"></span>
+                                            </a>
+                                        </span>
                                     </div>
                                 </div>
+                            </div>
+                            <!-- Fila de busqueda avanzada visible al activar -->
+                            <div id="busquedaAvanzada" class="row" style="display:none">
+                              <div class="col-xs-12 col-lg-2 col-lg-offset-1">
+                                <div class="input-group-btn">
+                                  <span class="input-group-addon">
+                                    <span class="glyphicons glyphicon-glass" aria-hidden="true"></span>
+                                    <input type="checkbox">
+                                  </span>
+                                </div>
+
+                              </div>
                             </div>
                         </div>
                     </div>
@@ -111,7 +128,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-md-6 col-lg-8">
                             <a href="#" class="thumbnail">
-                                <img src="imagenes/barSantos.jpg" alt="Bar Santos" >
+                                <img id="santos" src="imagenes/barSantos.jpg" onclick="aumentarImg()" alt="Bar Santos" >
                             </a>
                         </div>
                     </div>
@@ -133,11 +150,7 @@
     <br><br><br>
 
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-lg-4">
 
-            </div>
-        </div>
 
 
 
