--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                         <div class="panel-body">
                           <!-- Fila de busqueda siempre visible -->
                             <div class="row">
-                                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+                                <div class="col-xs-12 col-lg-8">
                                     <div class="input-group">
-
                                         <div class="input-group-btn">
                                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                                 Nombre <span class="caret"></span>
@@ -71,24 +70,30 @@
                                                 <li><a href="#">CP  <span class="glyphicon glyphicon-search"></span></a></li>
                                                 <li><a href="#">Ciudad  <span class="glyphicon glyphicon-search"></span></a></li>
                                             </ul>
-                                        </div>
-
+                                          </div>
                                         <input type="search" class="form-control" placeholder="Introduce tu busqueda">
 
-                                        <span class="input-group-btn">
+                                        <div class="input-group-btn">
                                             <a id="btnBuscar" class="btn btn-primary" href="#" role="button">
                                                 <span class="glyphicon glyphicon-search"></span>
                                             </a>
                                             <!-- <button id="btnBuscar" type="button" class="btn btn-primary">
                                               <span class="glyphicon glyphicon-search"></span>
                                             </button>-->
-                                        </span>
-                                        <span class="input-group-btn">
-                                            <a  class="btn btn-primary" href="#" role="button">
-                                                Busqueda azanzada<span id="btnBusquedaAvanzada" class="glyphicon glyphicon-chevron-down"></span>
-                                            </a>
-                                        </span>
+                                        </div>
                                     </div>
+                                </div>
+                                <div class="col-xs-12 col-lg-3">
+                                  <div class="input-group">
+                                    <div class="input-group-btn">
+                                      <button  class="btn btn-primary" href="#" role="button">
+                                          Busqueda azanzada
+                                      </button>
+                                      <a  class="btn btn-primary" href="#" role="button">
+                                        <span id="btnBusquedaAvanzada" class="glyphicon glyphicon-chevron-down"></span>
+                                      </a>
+                                    </div>
+                                  </div>
                                 </div>
                             </div>
                             <!-- Fila de busqueda avanzada visible al activar -->
