--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <header>
       <!-- Cabecera de la pagina -->
       <div class="row">
-        <div class="col-xs-9 col-lg-9 noPaddingDirectorio">
+        <div class="col-xs-4 col-md-6 col-lg-9 noPaddingDirectorio">
           <ol class="breadcrumb">
             <li class="glyphicon glyphicon-home"><a href="index.html">  Inicio</a></li>
             <!-- <li><a href="#">Nuevo usuario</a></li>-->
             <!-- <li class="active">Data</li>-->
           </ol>
         </div>
-        <div class="col-xs-3 col-lg-3 noPaddingLogin">
-          <div id="login" class="panel text-center">
+        <div class="col-xs-8 col-md-6 col-lg-3 noPaddingLogin">
+          <div id="login" class="panel text-right">
               <a href="#">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
               <a href="html/formularioEmpresa.html">¿Eres empresa?</a>
           </div>
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-8 col-lg-8">
-                <div class="recuadroBlanco">
+
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title text-center">Busca tu oferta mas cercana</h3>
@@ -58,7 +58,7 @@
                         <div class="panel-body">
                           <!-- Fila de busqueda siempre visible -->
                             <div class="row">
-                                <div class="col-xs-12 col-lg-8">
+                                <div class="col-xs-12 col-sm-8 col-lg-8">
                                     <div class="input-group">
                                         <div class="input-group-btn">
                                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -83,17 +83,19 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-lg-3">
-                                  <div class="input-group">
-                                    <div class="input-group-btn">
-                                      <button  class="btn btn-primary" href="#" role="button">
-                                          Busqueda azanzada
-                                      </button>
-                                      <a  class="btn btn-primary" href="#" role="button">
-                                        <span id="btnBusquedaAvanzada" class="glyphicon glyphicon-chevron-down"></span>
-                                      </a>
+                                <div class="col-xs-9 col-sm-1 col-lg-1 col-xs-offset-2 col-lg-pull-2 col-sm-pull-2 paddingBusquedaAvanzada">
+                                    <div class="input-group">
+                                      <div class="input-group-btn">
+                                        <button  class="btn btn-primary" href="#" role="button">
+                                            Busqueda azanzada
+                                        </button>
+                                      </div>
+                                      <div id="btnBusquedaAvanzada" class="input-group-btn">
+                                        <a   class="btn btn-primary" href="#" role="button">
+                                          <span  class="glyphicon glyphicon-chevron-down"></span>
+                                        </a>
+                                      </div>
                                     </div>
-                                  </div>
                                 </div>
                             </div>
                             <!-- Fila de busqueda avanzada visible al activar -->
@@ -110,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+
             </div>
 
             <!-- Imagenes de bares -->
