--- a/index.html
+++ b/index.html
@@ -19,35 +19,37 @@
     <header>
       <!-- Cabecera de la pagina -->
       <div class="row">
-        <div class="col-xs-4 col-md-6 col-lg-9 noPaddingDirectorio">
-          <ol class="breadcrumb">
+        <div class="col-xs-8 col-md-6 col-lg-9 noPaddingDirectorio">
+          <ol class="breadcrumb panelLogin">
             <li class="glyphicon glyphicon-home"><a href="index.html">  Inicio</a></li>
             <!-- <li><a href="#">Nuevo usuario</a></li>-->
             <!-- <li class="active">Data</li>-->
           </ol>
         </div>
-        <div class="col-xs-8 col-md-6 col-lg-3 noPaddingLogin">
-          <div id="login" class="panel text-right">
-              <a href="#">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
+        <div class="col-xs-4 col-md-6 col-lg-3 noPaddingLogin">
+          <div id="login" class="text-right">
+              <a href="html/formularioCliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
               <a href="html/formularioEmpresa.html">¿Eres empresa?</a>
           </div>
         </div>
       </div>
 
       <!-- Fin cabecera de la pagina -->
-
-      <div class="jumbotron">
-        <p class="text-info text-center">Busca tu oferta mas cercana</p>
-
-
-      </div>
     </header>
-    <br><br>
+
 
 
 
     <section>
       <div class="container">
+        <!-- Logotipo -->
+        <div class="jumbotron">
+          <p class="text-info text-center">Busca tu oferta mas cercana</p>
+
+
+        </div>
+        <!-- Fin logotipo -->
+
         <div class="row">
             <div class="col-xs-12 col-md-8 col-lg-8">
 
