--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
-
+    <!-- To insert the icon: -->
+    <!-- <link type="text/css" rel="stylesheet" href="../fontello/css/iconset.css" /> -->
 
   </head>
   <body>
@@ -41,15 +42,15 @@
 
 
     <section>
-      <div class="container">
+
         <!-- Logotipo -->
         <div class="jumbotron">
-          <p class="text-info text-center">Busca tu oferta mas cercana</p>
-
+          <p class="colorTitulo text-left">MASTER CHEQUE</p>
+          <hr>
 
         </div>
         <!-- Fin logotipo -->
-
+      <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-8 col-lg-8">
 
@@ -61,7 +62,7 @@
                           <!-- Fila de busqueda siempre visible -->
                             <div class="row">
                                 <div class="col-xs-12 col-sm-8 col-lg-8">
-                                  <form method="post" id="formBusqueda">
+                                  <form method="post" action="html/mostrarBusquedas.php">
                                     <div class="input-group">
                                         <div class="input-group-btn">
                                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -73,21 +74,21 @@
                                                 <li><a href="#">CP  <span class="glyphicon glyphicon-search"></span></a></li>
                                                 <li><a href="#">Ciudad  <span class="glyphicon glyphicon-search"></span></a></li>
                                             </ul>
-                                          </div>
+                                        </div>
 
-                                          <input id="campoBusqueda" type="search" class="form-control" placeholder="Introduce tu busqueda">
+                                          <input name="campoBusqueda" type="search" class="form-control" placeholder="Introduce tu busqueda">
 
                                           <div class="input-group-btn">
-                                            <a id="btnBuscar" type="submit" class="btn btn-primary" href="" role="button">
+                                            <button id="btnBuscar" type="submit" class="btn btn-primary" href="">
                                                 <span class="glyphicon glyphicon-search"></span>
-                                            </a>
+                                            </button>
                                             <!-- <button id="btnBuscar" type="button" class="btn btn-primary">
                                               <span class="glyphicon glyphicon-search"></span>
                                             </button>-->
                                           </div>
 
                                     </div>
-                                      </form>
+                                  </form>
                                 </div>
                                 <div class="col-xs-9 col-sm-1 col-lg-1 col-xs-offset-2 col-lg-pull-2 col-sm-pull-2 paddingBusquedaAvanzada">
                                     <div class="input-group">
@@ -109,7 +110,7 @@
                               <div class="col-xs-12 col-lg-2 col-lg-offset-1">
                                 <div class="input-group-btn">
                                   <span class="input-group-addon">
-                                    <span class="glyphicons glyphicon-glass" aria-hidden="true"></span>
+                                    <span class="icon-glass" aria-hidden="true"></span>
                                     <input type="checkbox">
                                   </span>
                                 </div>
@@ -193,5 +194,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
     <script src="fonts/glyphicons-halflings-regular.eot"></script>
+    <script src="fontello/fonts/iconset.svg"></script>
   </body>
 </html>
