--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -36,15 +36,19 @@
 
         <div class="container">
           
-          <div class="row">
+          <div class="row titulo_box">
 
-            <div class="col">
+            <div class="col-xs-12 col-lg-6">
 
               <h3> Bienvenido al área de cliente </h3>
 
             </div>
 
-            <div class="col">
+          </div>
+
+          <div class="row caja">
+
+            <div class="col-xs-12 col-lg-6">
 
               <form method="post" name="form">
 
