--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <div class="col-xs-9 col-md-6 col-lg-3 noPaddingLogin">
           <div id="login" class="text-right">
-              <a href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
-              <a href="html/formularioEmpresa.html">¿Eres empresa?</a>
+              <a class="cliente" href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
+              <a class="empresa" href="html/formularioEmpresa.html">¿Eres empresa?</a>
           </div>
         </div>
       </div>
