--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
     <!-- To insert the icon: -->
-    <!-- <link type="text/css" rel="stylesheet" href="../fontello/css/iconset.css" /> -->
+    <link type="text/css" rel="stylesheet" href="css/iconset.css" />
 
   </head>
   <body>
@@ -105,17 +105,26 @@
                                     </div>
                                 </div>
                             </div>
+
                             <!-- Fila de busqueda avanzada visible al activar -->
                             <div id="busquedaAvanzada" class="row" style="display:none">
                               <div class="col-xs-12 col-lg-2 col-lg-offset-1">
                                 <div class="input-group-btn">
                                   <span class="input-group-addon">
-                                    <span class="icon-glass" aria-hidden="true"></span>
+                                    <span class="icon-restaurant" aria-hidden="true"></span>
                                     <input type="checkbox">
                                   </span>
                                 </div>
-
                               </div>
+                              <div class="col-xs-12 col-lg-2 col-lg-offset-1">
+                                <div class="input-group-btn">
+                                  <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+                                    <input type="checkbox">
+                                  </span>
+                                </div>
+                              </div>
+
                             </div>
                         </div>
                     </div>
@@ -194,6 +203,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
     <script src="fonts/glyphicons-halflings-regular.eot"></script>
-    <script src="fontello/fonts/iconset.svg"></script>
+    <script src="fontello/font/iconset.eot"></script>
   </body>
 </html>
