--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-  	<title>Login cliente</title>
+  	<title>Login empresa</title>
   	
   	<link rel="stylesheet" href="../css/bootstrap.min.css">
 
@@ -29,7 +29,7 @@
       
       <!-- Logotipo -->
       <div class="jumbotron">
-        <p class="colorTitulo text-left"><a class="atras" href="../index.html">MASTER CHEQUE</a></p>
+        <p class="colorTitulo text-left"><a class="atras" href="../index.html">MASTER CHEQUE</a></E</p>
         <hr>
       </div>
     </section>
@@ -40,7 +40,7 @@
 
             <div class="col-xs-12 col-lg-6">
 
-              <h4><strong> Bienvenido al área de cliente</strong></h4>
+              <h4><strong> Bienvenido al área de empresa</strong></h4>
 
             </div>
 
