--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-xs-9 col-md-6 col-lg-3 noPaddingLogin">
           <div id="login" class="text-right">
               <a class="cliente" href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
-              <a class="empresa" href="html/formularioEmpresa.html">¿Eres empresa?</a>
+              <a class="empresa" href="html/login_empresa.html">¿Eres empresa?</a>
           </div>
         </div>
       </div>
