--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <div class="input-group-btn">
                                   <span class="input-group-addon">
                                     <span class="icon-restaurant" aria-hidden="true"></span>
-                                    <input type="checkbox">
+                                    <input id="restaurante" type="checkbox">
                                   </span>
                                 </div>
                               </div>
@@ -120,12 +120,15 @@
                                 <div class="input-group-btn">
                                   <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
-                                    <input type="checkbox">
+                                    <input id="bar" type="checkbox">
                                   </span>
                                 </div>
                               </div>
 
                             </div>
+
+
+
                         </div>
                     </div>
 
