--- a/index.html
+++ b/index.html
@@ -1,176 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Master Cheque</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
-    <!-- To insert the icon: -->
-    <link type="text/css" rel="stylesheet" href="css/iconset.css" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Master Cheque</title>
 
-  </head>
-  <body>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/index.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
+  <!-- To insert the icon: -->
+  <link type="text/css" rel="stylesheet" href="css/iconset.css" />
+
+</head>
+
+<body>
 
 
-    <header>
-      <!-- Cabecera de la pagina -->
-      <div class="row">
-        <div class="col-xs-3 col-md-6 col-lg-9 noPaddingDirectorio">
-          <ol class="breadcrumb panelLogin">
-            <li class="glyphicon glyphicon-home"><a href="index.html">  Inicio</a></li>
-            <!-- <li><a href="#">Nuevo usuario</a></li>-->
-            <!-- <li class="active">Data</li>-->
-          </ol>
-        </div>
-        <div class="col-xs-9 col-md-6 col-lg-3 noPaddingLogin">
-          <div id="login" class="text-right">
-              <a class="cliente" href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
-              <a class="empresa" href="html/login_empresa.html">¿Eres empresa?</a>
-          </div>
+  <header>
+    <!-- Cabecera de la pagina -->
+    <div class="row">
+      <div class="col-xs-3 col-md-6 col-lg-9 noPaddingDirectorio">
+        <ol class="breadcrumb panelLogin">
+          <li class="glyphicon glyphicon-home"><a href="index.html">  Inicio</a></li>
+          <!-- <li><a href="#">Nuevo usuario</a></li>-->
+          <!-- <li class="active">Data</li>-->
+        </ol>
+      </div>
+      <div class="col-xs-9 col-md-6 col-lg-3 noPaddingLogin">
+        <div id="login" class="text-right">
+          <a class="cliente" href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
+          <a class="empresa" href="html/login_empresa.html">¿Eres empresa?</a>
         </div>
       </div>
+    </div>
 
-      <!-- Fin cabecera de la pagina -->
-    </header>
+    <!-- Fin cabecera de la pagina -->
+  </header>
 
 
 
 
-    <section>
+  <section>
 
-        <!-- Logotipo -->
-        <div class="jumbotron">
-          <p class="colorTitulo text-left">MASTER CHEQUE</p>
-          <hr>
+    <!-- Logotipo -->
+    <div class="jumbotron">
+      <p class="colorTitulo text-left">MASTER CHEQUE</p>
+      <hr>
 
-        </div>
-        <!-- Fin logotipo -->
-      <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12 col-md-8 col-lg-8">
+    </div>
+    <!-- Fin logotipo -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-lg-8">
 
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title text-center">Busca tu oferta mas cercana</h3>
-                        </div>
-                        <div class="panel-body">
-                          <!-- Fila de busqueda siempre visible -->
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-8 col-lg-8">
-                                  <form method="post" action="html/mostrarBusquedas.php">
-                                    <div class="input-group">
-                                        <div class="input-group-btn">
-                                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+          <div class="panel panel-primary">
+            <form method="post" action="html/mostrarBusquedas.php">
+
+              <div class="panel-heading">
+                <h3 class="panel-title text-center">Busca tu oferta mas cercana</h3>
+              </div>
+              <div class="panel-body">
+                <!-- Fila de busqueda siempre visible -->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-8 col-lg-8">
+
+                    <div class="input-group">
+                      <div class="input-group-btn">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                                 Nombre <span class="caret"></span>
                                             </button>
 
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a href="#">Nombre  <span class="glyphicon glyphicon-search"></span></a></li>
-                                                <li><a href="#">CP  <span class="glyphicon glyphicon-search"></span></a></li>
-                                                <li><a href="#">Ciudad  <span class="glyphicon glyphicon-search"></span></a></li>
-                                            </ul>
-                                        </div>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">Nombre  <span class="glyphicon glyphicon-search"></span></a></li>
+                          <li><a href="#">CP  <span class="glyphicon glyphicon-search"></span></a></li>
+                          <li><a href="#">Ciudad  <span class="glyphicon glyphicon-search"></span></a></li>
+                        </ul>
+                      </div>
 
-                                          <input name="campoBusqueda" type="search" class="form-control" placeholder="Introduce tu busqueda">
+                      <input name="campoBusqueda" type="search" class="form-control" placeholder="Introduce tu busqueda">
 
-                                          <div class="input-group-btn">
-                                            <button id="btnBuscar" type="submit" class="btn btn-primary" href="">
+                      <div class="input-group-btn">
+                        <button id="btnBuscar" type="submit" class="btn btn-primary" href="">
                                                 <span class="glyphicon glyphicon-search"></span>
                                             </button>
-                                            <!-- <button id="btnBuscar" type="button" class="btn btn-primary">
+                        <!-- <button id="btnBuscar" type="button" class="btn btn-primary">
                                               <span class="glyphicon glyphicon-search"></span>
                                             </button>-->
-                                          </div>
+                      </div>
 
-                                    </div>
-                                  </form>
-                                </div>
-                                <div class="col-xs-9 col-sm-1 col-lg-1 col-xs-offset-2 col-lg-pull-2 col-sm-pull-2 paddingBusquedaAvanzada">
-                                    <div class="input-group">
-                                      <div class="input-group-btn">
-                                        <button  class="btn btn-primary" href="#" role="button">
+                    </div>
+
+                  </div>
+                  <div class="col-xs-9 col-sm-1 col-lg-1 col-xs-offset-2 col-lg-pull-2 col-sm-pull-2 paddingBusquedaAvanzada">
+                    <div class="input-group">
+                      <div class="input-group-btn">
+                        <button class="btn btn-primary" href="#" role="button">
                                             Busqueda azanzada
                                         </button>
-                                      </div>
-                                      <div id="btnBusquedaAvanzada" class="input-group-btn">
-                                        <a   class="btn btn-primary" href="#" role="button">
-                                          <span  class="glyphicon glyphicon-chevron-down"></span>
-                                        </a>
-                                      </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Fila de busqueda avanzada visible al activar -->
-                            <div id="busquedaAvanzada" class="row" style="display:none">
-                              <div class="col-xs-12 col-lg-2 col-lg-offset-1">
-                                <div class="input-group-btn">
-                                  <span class="input-group-addon">
-                                    <span class="icon-restaurant" aria-hidden="true"></span>
-                                    <input id="restaurante" type="checkbox">
-                                  </span>
-                                </div>
-                              </div>
-                              <div class="col-xs-12 col-lg-2 col-lg-offset-1">
-                                <div class="input-group-btn">
-                                  <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
-                                    <input id="bar" type="checkbox">
-                                  </span>
-                                </div>
-                              </div>
-
-                            </div>
-
-
-
-                        </div>
+                      </div>
+                      <div id="btnBusquedaAvanzada" class="input-group-btn">
+                        <a class="btn btn-primary" href="#" role="button">
+                          <span class="glyphicon glyphicon-chevron-down"></span>
+                        </a>
+                      </div>
                     </div>
+                  </div>
+                </div>
 
-            </div>
+                <!-- Fila de busqueda avanzada visible al activar -->
+                <div id="busquedaAvanzada" class="row" style="display:none">
+                  <div class="col-xs-12 col-lg-2 col-lg-offset-1">
+                    <div class="input-group-btn">
+                      <span class="input-group-addon">
+                                    <span class="icon-restaurant" aria-hidden="true"></span>
+                      <input id="restaurante" name="tipo" type="checkbox" value="rest">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-lg-2 col-lg-offset-1">
+                    <div class="input-group-btn">
+                      <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+                      <input id="bar" name="tipo" type="checkbox" value="bar">
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
 
-            <!-- Imagenes de bares -->
-            <div class="col-xs-12 col-md-4 col-lg-4">
-                <div class="panel panel-primary">
-                  <div class="panel-heading">
-                      <h3 class="panel-title text-left">Empresas destacadas</h3>
+        </div>
 
-                      <span class="input-group-btn">
+        <!-- Imagenes de bares -->
+        <div class="col-xs-12 col-md-4 col-lg-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title text-left">Empresas destacadas</h3>
+
+              <span class="input-group-btn">
                           <a class="btn btn-primary" href="#" role="button">
                               <span class="glyphicon glyphicon-chevron-left"></span>
-                          </a>
+              </a>
 
-                          <a class="btn btn-primary" href="#" role="button">
-                              <span class="glyphicon glyphicon-chevron-right"></span>
-                          </a>
-                      </span>
-                  </div>
-                  <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-6 col-md-6 col-lg-8">
-                            <a href="#" class="thumbnail">
-                                <img id="santos" src="imagenes/barSantos.jpg" onclick="aumentarImg()" alt="Bar Santos" >
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-6 col-md-6 col-lg-8">
-                            <a href="#" class="thumbnail">
-                                <img src="imagenes/pataNegra.jpg" alt="Bar Pata Negra">
-                            </a>
-                        </div>
-                    </div>
-
-                  </div>
-
-                </div>
+              <a class="btn btn-primary" href="#" role="button">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+              </span>
             </div>
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-xs-6 col-md-6 col-lg-8">
+                  <a href="#" class="thumbnail">
+                    <img id="santos" src="imagenes/barSantos.jpg" onclick="aumentarImg()" alt="Bar Santos">
+                  </a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-6 col-md-6 col-lg-8">
+                  <a href="#" class="thumbnail">
+                    <img src="imagenes/pataNegra.jpg" alt="Bar Pata Negra">
+                  </a>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
         </div>
+      </div>
     </div>
 
     <br><br><br>
@@ -185,7 +186,7 @@
   </section>
 
 
-      <br><br><br>
+  <br><br><br>
 
 
   <footer>
@@ -200,12 +201,13 @@
 
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="fonts/glyphicons-halflings-regular.eot"></script>
-    <script src="fontello/font/iconset.eot"></script>
-  </body>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/index.js"></script>
+  <script src="fonts/glyphicons-halflings-regular.eot"></script>
+  <script src="fontello/font/iconset.eot"></script>
+</body>
+
 </html>
