--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -60,9 +60,9 @@
                   <input type="password" name="email" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="contra" id="contra" name="contra" />
                     
 
-                  <a href="ficha_cliente.html"><div class="btn">Acceder</div></a> <!-- End Btn -->
+                  <a href="ficha_empresa.html"><div class="btn">Acceder</div></a> <!-- End Btn -->
 
-                  <a href="registro_cliente.html"><div id="btn2">Alta nueva</div></a><br> <!-- End Btn2 -->
+                  <a href="registro_empresa.html"><div id="btn2">Alta nueva</div></a><br> <!-- End Btn2 -->
 
                   <a class="olvido" href="olvido.html">¿Has olvidado tu contraseña?</a>  
 
