--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Idea de ofertas diarias con paginacion -->
 <html lang="en">
 
 <head>
@@ -31,7 +32,7 @@
       </div>
       <div class="col-xs-9 col-md-6 col-lg-3 noPaddingLogin">
         <div id="login" class="text-right">
-          <a class="cliente" href="html/login_cliente.html">¿Eres cliente?<span class="glyphicon glyphicon-minus"></span></a>
+          <a class="cliente" href="html/login_cliente.html">¿Eres particular?<span class="glyphicon glyphicon-minus"></span></a>
           <a class="empresa" href="html/login_empresa.html">¿Eres empresa?</a>
         </div>
       </div>
@@ -143,7 +144,7 @@
                 <a class="btn btn-primary" href="#" role="button">
                   <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
-              -->
+              -->eres
               </span>
             </div>
             <div class="panel-body">
