Recuperar contraseña añadido

--- a/html/alta_empresa.html
+++ b/html/alta_empresa.html
@@ -29,6 +29,7 @@
 
         <div class="container">
             <div class="recuadroBlanco">
+            <form action="alta_empresa.php" method="post">
             <h3>Alta nueva empresa</h3>
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -103,7 +104,7 @@
                     </div>
                 </div>
             </div>
-              
+            </form>
             </div>
         </div>
     </section>
