--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -21,7 +21,7 @@
       <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
         <ol class="breadcrumb panelLogin">
           <li class="glyphicon glyphicon-home"><a href="../index.html">  Inicio</a></li>
-          <li class="active"><a href="#">Login cliente</a></li>
+          <li class="active"><a href="#">Cliente</a></li>
           <!-- <li class="active">Data</li>-->
         </ol>
       </div>
