--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -26,7 +26,7 @@
       <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
         <ol class="breadcrumb panelLogin">
           <li class="glyphicon glyphicon-home"><a href="../index.html">  Inicio</a></li>
-          <li class="active"><a href="#">Login empresa</a></li>
+          <li class="active"><a href="#">Empresa</a></li>
           <!-- <li class="active">Data</li>-->
         </ol>
       </div>
