--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <!-- Cabecera de la pagina -->
+  <!-- Arbol de navegacion -->
     <div class="row">
       <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
         <ol class="breadcrumb panelLogin">
