--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -21,7 +21,7 @@
       <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
         <ol class="breadcrumb panelLogin">
           <li class="glyphicon glyphicon-home"><a href="../index.html">  Inicio</a></li>
-          <li class="active"><a href="#">Cliente</a></li>
+          <li class="active"><a href="#">Particular</a></li>
           <!-- <li class="active">Data</li>-->
         </ol>
       </div>
@@ -42,7 +42,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
+      <div class="col-xs-12 col-md-8 col-lg-6">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title text-center">Bienvenido al área de cliente</h3>
@@ -50,6 +50,7 @@
 
             <div class="panel-body">
               <h5 class="text-center">Iniciar sesion</h5>
+              <div class="col-xs-12 col-md-8 col-lg-12">
               <form method="post" action="ficha_cliente.html" name="form">
 
                 <div class="input-group ajusteLateral">
@@ -65,19 +66,9 @@
                 <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
                 <a id="btnOlvido" class="btn btn-primary" role="button" href="olvido.html">¿Has olvidado tu contraseña?</a>
               </div>
-              <!--
-              <a href="ficha_cliente.html">
-                  <div class="btn btn-primary">Acceder</div>
-              </a>
-
-
-              <a href="alta_cliente.php">
-                  <div id="btn2 btn-primary">Alta nueva</div>
-              </a><br>
-
-              -->
 
               </form>
+            </div>
             </div>
         </div>
       </div>
