--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -40,7 +40,7 @@
 
     <!-- Logotipo -->
     <div class="jumbotron">
-      <p class="colorTitulo text-left"><a class="atras" href="../index.html">MASTER CHEQUE</a></p>
+      <p class="colorTitulo text-left">MASTER CHEQUE</p>
         <hr>
     </div>
   </section>
