--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                   <div class="col-xs-9 col-sm-1 col-lg-1 col-xs-offset-2 col-lg-pull-2 col-sm-pull-2 paddingBusquedaAvanzada">
                     <div class="input-group">
                       <div class="input-group-btn">
-                        <button class="btn btn-primary" href="#" role="button">
+                        <button class="btn btn-primary etiquetaLupa" href="#" role="button">
                                             Busqueda azanzada
                                         </button>
                       </div>
                       <div id="btnBusquedaAvanzada" class="input-group-btn">
-                        <a class="btn btn-primary" href="#" role="button">
+                        <a id="iconoLupa" class="btn btn-primary" href="#" role="button">
                           <span class="glyphicon glyphicon-chevron-down"></span>
                         </a>
                       </div>
