--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -39,10 +39,10 @@
     </div>
   </section>
 
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row">
-      <div class="col-xs-12 col-md-8 col-lg-6">
+      <div class="col-xs-12 col-md-8 col-lg-8">
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title text-center">Bienvenido al área de cliente</h3>
