--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -45,11 +45,11 @@
     </div>
   </section>
 
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row">
 
-      <div class="col-xs-12 col-lg-6">
+      <div class="col-xs-12 col-lg-8">
 
         <div class="panel panel-primary">
           <div class="panel-heading">
