--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -64,7 +64,7 @@
               <div class="input-group-btn ajusteLateral separacionTop">
                 <button id="btnAcceder" type="submit" class="btn btn-primary">Acceder</button>
                 <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
-                <a id="btnOlvido" class="btn btn-primary" role="button" href="olvido.html">¿Has olvidado tu contraseña?</a>
+                <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_passwd.php">¿Has olvidado tu contraseña?</a>
               </div>
 
               </form>
