--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/login_cliente.css">
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/general.css">
 
 
 </head>
