--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/login_empresa.css">
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/general.css">
 
 
   <!--[if lt IE 9]>
