--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -62,7 +62,7 @@
                 </div>
 
               <div class="input-group-btn ajusteLateral separacionTop">
-                <button id="btnAcceder" type="submit" class="btn btn-primary">Acceder</button>
+                <input type="submit" name="enviar" class="btn btn-primary" value="Acceder">
                 <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
                 <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_cliente.php">¿Has olvidado tu contraseña?</a>
               </div>
@@ -78,6 +78,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
 
   <script src="js/login_cliente.js"></script>
+  <script src="js/campos_vacios.js"></script>
 
 </body>
 
