--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Estyles -->
+  <!-- Styles -->
   <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/index.css">
   <!-- To insert the icon: -->
