--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -117,9 +117,9 @@
               <form method="post" action="ficha_cliente.php" name="form">
 
                 <div class="input-group ajusteLateral">
-                  <input id="email" name="email" type="email" placeholder="email" class="email" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
+                  <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
 
-                  <input id="password" name="contra" type="password" placeholder="Contraseña" class="contra" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
+                  <input id="password" name="contra" type="password" placeholder="Contraseña" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
                 </div>
 
 
