realizadas hojas perfil y ajuste

--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -51,7 +51,7 @@
             <div class="panel-body">
               <h5 class="text-center">Iniciar sesion</h5>
               <div class="col-xs-12 col-md-8 col-lg-12">
-              <form method="post" action="ficha_cliente.php" name="form">
+              <form method="post" action="usuario.php" name="form">
 
                 <div class="input-group ajusteLateral">
                   <input id="email" name="email" type="email" placeholder="email" class="email"
