--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -116,14 +116,14 @@
             <div class="col-xs-12 col-md-8 col-lg-12">
               <form method="post" action="ficha_cliente.php" name="form">
 
-                <div class="input-group ajusteLateral">
-                  <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
-
-                  <input id="password" name="contra" type="password" placeholder="Contraseña" class="form-control inputForm" onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
+                <div class="input-group">
+                  <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm"
+                         onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
+                  <input id="password" name="contra" type="password" placeholder="Contraseña" class="form-control inputForm"
+                         onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
                 </div>
 
-
-                <div class="input-group-btn ajusteLateral separacionTop">
+                <div class="input-group-btn">
                   <button id="btnAcceder" type="submit" class="btn btn-primary">Acceder</button>
                   <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
                   <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_cliente.php">¿Has olvidado tu contraseña?</a>
